--- a/build.gradle
+++ b/build.gradle
@@ -1,43 +1,11 @@
-plugins {
-	id 'org.springframework.boot'
-	id 'io.spring.dependency-management'
-	id 'java'
-}
-
-group = 'com.inwaiders.plames'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
+apply plugin: 'java-library'
 
 repositories {
-	mavenCentral()
-	jcenter()
-}
 
-bootJar {
-
-   enabled = false
-}
-
-jar{
-
-	enabled = true
-    baseName = 'web-control-api' 
-    version = '1.0'
+    jcenter()
 }
 
 dependencies {
 
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
-	
 	compile project(':Plames-API')
-    compile project(':Plames-Core')
-}
-
-test {
-	useJUnitPlatform()
 }
